Fixed text overflow issue for manage account.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -980,7 +980,7 @@ select.dropdown.preference{
   right:7px;
   height: 80%;
   top:14%;
-  font-size: 3.5vmin;
+  font-size: 3.1vmin;
 }
 
 .icon.ion-eye-disabled.login{
